# triton-kernels

./: .pre-commit-config.yaml  README.md  pyproject.toml
tk/: flash_attention.py  flash_attention_test.py  fused_softmax.py  fused_softmax_profile.py  fused_softmax_test.py  matmul.py  matmul_autotuned.py  matmul_module.py  matmul_module_test.py  matmul_profile.py  matmul_test.py  rgb_to_grey.py  rgb_to_grey_test.py  swizzle.py  swizzle_test.py  vector_addition.py  vector_addition_module.py  vector_addition_module_test.py  vector_addition_profile.py  vector_addition_test.py
